--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,176 @@
 absl-py==0.13.0
-albumentations==1.0.3
+alabaster==0.7.12
 altair==4.1.0
+appdirs==1.4.4
+argh==0.26.2
 argon2-cffi==20.1.0
+arrow==0.13.1
 astor==0.8.1
-astunparse==1.6.3
+astroid==2.6.6
 async-generator==1.10
+atomicwrites==1.4.0
 attrs==21.2.0
+autopep8==1.5.6
+Babel==2.9.1
 backcall==0.2.0
 base58==2.1.0
+bcrypt==3.2.0
+binaryornot==0.4.4
+black==19.10b0
 bleach==4.0.0
 blinker==1.4
+brotlipy==0.7.0
 cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
+chardet==4.0.0
 charset-normalizer==2.0.4
-click==7.1.2
+click==8.0.1
+cloudpickle==1.6.0
 colorama==0.4.4
+cookiecutter==1.7.2
+cryptography==3.4.7
 cycler==0.10.0
 debugpy==1.4.1
 decorator==5.0.9
 defusedxml==0.7.1
-dlib==19.22.0
+diff-match-patch==20200713
+docutils==0.17.1
 entrypoints==0.3
-flatbuffers==1.12
-gast==0.3.3
+flake8==3.9.0
+Flask==2.0.1
+future==0.18.2
 gitdb==4.0.7
 GitPython==3.1.18
-google-auth==1.35.0
-google-auth-oauthlib==0.4.5
-google-pasta==0.2.0
-grpcio==1.32.0
-h5py==2.10.0
 idna==3.2
-imageio==2.9.0
-ipykernel==6.0.3
+imagesize==1.2.0
+importlib-metadata==3.10.0
+inflection==0.5.1
+intervaltree==3.1.0
+ipykernel==6.1.0
 ipython==7.26.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
+isort==5.9.3
+itsdangerous==2.0.1
 jedi==0.18.0
 Jinja2==3.0.1
+jinja2-time==0.2.0
 jsonschema==3.2.0
 jupyter-client==6.1.12
 jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
-Keras-Preprocessing==1.1.2
+keyring==23.0.1
 kiwisolver==1.3.1
-Markdown==3.3.4
+lazy-object-proxy==1.6.0
 MarkupSafe==2.0.1
-matplotlib==3.4.3
+matplotlib==3.4.2
 matplotlib-inline==0.1.2
+mccabe==0.6.1
 mediapipe==0.8.6.2
 mistune==0.8.4
+mypy-extensions==0.4.3
 nbclient==0.5.3
 nbconvert==6.1.0
 nbformat==5.1.3
 nest-asyncio==1.5.1
-networkx==2.6.2
-notebook==6.4.0
-numpy==1.19.5
-oauthlib==3.1.1
+notebook==6.4.3
+numpy==1.21.1
+numpydoc==1.1.0
+opencv-contrib-python==4.5.3.56
 opencv-python==4.5.3.56
-opencv-python-headless==4.5.3.56
-opt-einsum==3.3.0
 packaging==21.0
 pandas==1.3.1
 pandocfilters==1.4.3
+paramiko==2.7.2
 parso==0.8.2
+pathspec==0.7.0
+pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.3.1
+pip==21.2.2
+pluggy==0.13.1
+poyo==0.5.0
 prometheus-client==0.11.0
 prompt-toolkit==3.0.19
 protobuf==3.17.3
+psutil==5.8.0
+ptyprocess==0.7.0
 pyarrow==5.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+pycodestyle==2.6.0
 pycparser==2.20
 pydeck==0.6.2
-Pygments==2.9.0
+pydocstyle==6.1.1
+pyflakes==2.2.0
+Pygments==2.10.0
+pylint==2.9.6
+pyls-black==0.4.6
+pyls-spyder==0.3.2
+PyNaCl==1.4.0
+pyOpenSSL==20.0.1
 pyparsing==2.4.7
 pyrsistent==0.18.0
+PySocks==1.7.1
 python-dateutil==2.8.2
+python-jsonrpc-server==0.4.0
+python-language-server==0.36.2
+python-slugify==5.0.2
 pytz==2021.1
-PyWavelets==1.1.1
 PyYAML==5.4.1
 pyzmq==22.1.0
+QDarkStyle==3.0.2
+qstylizer==0.1.10
+QtAwesome==1.0.2
+qtconsole==5.1.0
+QtPy==1.9.0
+regex==2021.8.3
 requests==2.26.0
-requests-oauthlib==1.3.0
-rsa==4.7.2
-scikit-image==0.18.2
-scipy==1.7.1
-Send2Trash==1.7.1
-six==1.15.0
+rope==0.19.0
+Rtree==0.9.7
+Send2Trash==1.8.0
+setuptools==52.0.0.post20210125
+sip==4.19.13
+six==1.16.0
 smmap==4.0.0
-streamlit==0.85.1
-termcolor==1.1.0
-terminado==0.10.1
+snowballstemmer==2.1.0
+sortedcontainers==2.4.0
+Sphinx==4.0.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+spyder==5.0.5
+spyder-kernels==2.0.5
+streamlit==0.87.0
+terminado==0.11.0
 testpath==0.5.0
-tifffile==2021.8.8
+text-unidecode==1.3
+textdistance==4.2.1
+three-merge==0.1.1
+tinycss==0.4
 toml==0.10.2
 toolz==0.11.1
 tornado==6.1
 traitlets==5.0.5
-typing-extensions==3.7.4.3
+typed-ast==1.4.3
+typing-extensions==3.10.0.0
 tzlocal==2.1
+ujson==4.0.2
+Unidecode==1.2.0
 urllib3==1.26.6
 validators==0.18.2
 watchdog==2.1.3
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==2.0.1
+wheel==0.36.2
+whichcraft==0.6.1
 widgetsnbextension==3.5.1
+win-inet-pton==1.1.0
 wincertstore==0.2
 wrapt==1.12.1
+yapf==0.31.0
+zipp==3.5.0
