--- a/requirements.txt
+++ b/requirements.txt
@@ -68,7 +68,7 @@ pytz==2021.1
 pyzmq==22.1.0
 requests==2.26.0
 Send2Trash==1.8.0
-setuptools==52.0.0.post20210125
+setuptools==52.0.0
 six==1.16.0
 smmap==4.0.0
 streamlit==0.87.0
