--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ nest-asyncio==1.5.1
 notebook==6.4.3
 numpy==1.21.2
 opencv-contrib-python==4.5.3.56
-opencv-python==4.5.3.56
+opencv-python-headless==4.5.3.56
 packaging==21.0
 pandas==1.3.2
 pandocfilters==1.4.3
